--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -18,8 +18,15 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v3
     - uses: hashicorp/setup-terraform@v2
-with:
-    terraform_version: 1.1.7
+- name: Setup Terraform
+
+      uses: hashicorp/setup-terraform@v2
+
+      with:
+
+        terraform_version: 1.4.6
+
+        terraform_wrapper: false
     - name: Terraform Init
       id: init
       run: terraform init
